# Kinoko

./: .clang-format  .gitignore  .pylintrc  CMakeLists.txt  Doxyfile  LICENSE  README.md  STATUS.md  configure.py  testCases.json
.github/workflows/: build.yml
docs/: DoxygenLayout.xml  KRKG.md  TestCase.md  footer.html  header.html  overrides.css
include/: Common.cc  Common.hh  Logger.hh  ScopeLock.hh  Types.hh
samples/: bc-ng-rta-2-20-001.krkg  bc-ng-rta-2-20-001.rkg  bc-rta-2-08-697.krkg  bc-rta-2-08-697.rkg  cm-ng-rta-1-55-264.krkg  cm-ng-rta-1-55-264.rkg  cm-rta-0-25-145.krkg  cm-rta-0-25-145.rkg  dc-rta-1-28-321.krkg  dc-rta-1-28-321.rkg  ddr-rta-1-46-400.krkg  ddr-rta-1-46-400.rkg  dks-rta-1-44-568.krkg  dks-rta-1-44-568.rkg  gv-ng-rta-1-32-914.krkg  gv-ng-rta-1-32-914.rkg  gv-nosc-rta-1-50-927.krkg  gv-nosc-rta-1-50-927.rkg  gv-rta-0-15-425.krkg  gv-rta-0-15-425.rkg  kc-ng-rta-2-17-176.krkg  kc-ng-rta-2-17-176.rkg  kc-rta-1-55-250.krkg  kc-rta-1-55-250.rkg  lc-rta-1-08-733.krkg  lc-rta-1-08-733.rkg  mc-ng-rta-1-20-357.krkg  mc-ng-rta-1-20-357.rkg  mc-rta-0-46-553.krkg  mc-rta-0-46-553.rkg  mc-rta-1-20-357.krkg  mg-ng-rta-1-40-273.krkg  mg-ng-rta-1-40-273.rkg  mg-rta-0-19-758.krkg  mg-rta-0-19-758.rkg  mh-rta-1-42-872.krkg  mh-rta-1-42-872.rkg  mmm-rta-1-15-273.krkg  mmm-rta-1-15-273.rkg  mt-ng-rta-2-13-126.krkg  (+73 more)
source/: main.cc
source/abstract/: Archive.cc  Archive.hh  CRC32.hh  File.cc  File.hh  List.cc  List.hh  OSCalendarTime.hh
source/abstract/g3d/: AnmObj.cc  AnmObj.hh  ResAnmChr.cc  ResAnmChr.hh  ResCommon.hh  ResDic.cc  ResDic.hh  ResFile.hh
source/abstract/memory/: ExpHeap.cc  ExpHeap.hh  HeapCommon.cc  HeapCommon.hh  List.cc  List.hh  Memory.hh
source/bindings/: KBindSystem.cc  KBindSystem.hh  bindings.cc
source/egg/core/: Archive.cc  Archive.hh  BitFlag.hh  ColorFader.hh  Decomp.cc  Decomp.hh  Disposer.cc  Disposer.hh  ExpHeap.cc  ExpHeap.hh  Heap.cc  Heap.hh  Scene.cc  Scene.hh  SceneCreator.hh  SceneManager.cc  SceneManager.hh
source/egg/geom/: Plane.hh  Sphere.cc  Sphere.hh
source/egg/math/: BoundBox.cc  BoundBox.hh  Math.cc  Math.hh  Matrix.cc  Matrix.hh  Quat.cc  Quat.hh  Vector.cc  Vector.hh
source/egg/util/: Stream.cc  Stream.hh
source/game/field/: BoxColManager.cc  BoxColManager.hh  CollisionDirector.cc  CollisionDirector.hh  CollisionInfo.cc  CollisionInfo.hh  CourseColMgr.cc  CourseColMgr.hh  KColData.cc  KColData.hh  KCollisionTypes.hh  ObjColMgr.cc  ObjColMgr.hh  Object.cc  Object.hh  ObjectCollisionBase.cc  ObjectCollisionBase.hh  ObjectCollisionBox.cc  ObjectCollisionBox.hh  ObjectCollisionConvexHull.cc  ObjectCollisionConvexHull.hh  ObjectCollisionCylinder.cc  ObjectCollisionCylinder.hh  ObjectCollisionKart.cc  ObjectCollisionKart.hh  ObjectCollisionSphere.cc  ObjectCollisionSphere.hh  ObjectDirector.cc  ObjectDirector.hh  ObjectDrivableDirector.cc  ObjectDrivableDirector.hh  ObjectFlowTable.cc  ObjectFlowTable.hh  ObjectHitTable.cc  ObjectHitTable.hh  ObjectId.hh  Rail.cc  Rail.hh  RailInterpolator.cc  RailInterpolator.hh  (+5 more)
source/game/item/: ItemDirector.cc  ItemDirector.hh  ItemId.hh  ItemInventory.cc  ItemInventory.hh  KartItem.cc  KartItem.hh
source/game/kart/: CollisionGroup.cc  CollisionGroup.hh  KartAction.cc  KartAction.hh  KartBody.cc  KartBody.hh  KartBoost.cc  KartBoost.hh  KartBurnout.cc  KartBurnout.hh  KartCollide.cc  KartCollide.hh  KartDynamics.cc  KartDynamics.hh  KartHalfPipe.cc  KartHalfPipe.hh  KartJump.cc  KartJump.hh  KartMove.cc  KartMove.hh  KartObject.cc  KartObject.hh  KartObjectManager.cc  KartObjectManager.hh  KartObjectProxy.cc  KartObjectProxy.hh  KartParam.cc  KartParam.hh  KartParamFileManager.cc  KartParamFileManager.hh  KartPhysics.cc  KartPhysics.hh  KartPullPath.cc  KartPullPath.hh  KartReject.cc  KartReject.hh  KartScale.cc  KartScale.hh  KartState.cc  KartState.hh  (+9 more)
source/game/object/: GeoObjManager.cc  GeoObjManager.hh  ObjFlow.cc  ObjFlow.hh
source/game/render/: AnmMgr.cc  AnmMgr.hh  DrawMdl.cc  DrawMdl.hh  KartCamera.cc  KartCamera.hh  KartModel.cc  KartModel.hh
source/game/scene/: GameScene.cc  GameScene.hh  RaceScene.cc  RaceScene.hh  RootScene.cc  RootScene.hh
source/game/system/: CameraManager.cc  CameraManager.hh  CourseMap.cc  CourseMap.hh  DvdArchive.cc  DvdArchive.hh  GhostFile.cc  GhostFile.hh  GhostWriter.cc  GhostWriter.hh  InputManager.cc  InputManager.hh  KPadController.cc  KPadController.hh  KPadDirector.cc  KPadDirector.hh  MultiDvdArchive.cc  MultiDvdArchive.hh  RaceConfig.cc  RaceConfig.hh  RaceManager.cc  RaceManager.hh  Random.hh  ResourceManager.cc  (+5 more)
source/host/: Context.cc  Context.hh  KBindSystem.cc  KBindSystem.hh  KBindings.cc  KReplaySystem.cc  KReplaySystem.hh  KSystem.cc  KSystem.hh  KTestSystem.cc  KTestSystem.hh  Option.cc  Option.hh  SavestateManager.cc  SavestateManager.hh  SceneCreatorDynamic.cc  SceneCreatorDynamic.hh  SceneId.hh  System.cc  System.hh  main.cc
source/test/: Test.hh  TestDirector.cc  TestDirector.hh  main.cc
tools/: bindings_test.py  generate_tests.py  generate_version.py  progress.py  status_check.py
tools/discord/: bot.py
(+29 files in other folders)
